...
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.0 km"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="6dp"
            android:maxLines="1"
            android:text="IBE3174"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
